Issue #3218194: Style the RTL Layout Builder for the Alignment

--- a/scss/theme/vlb-enhancements.base.scss
+++ b/scss/theme/vlb-enhancements.base.scss
@@ -266,6 +266,12 @@ body {
       }
     }
 
+    .layout-selection li a {
+      padding-left: auto;
+      padding-right: 25px;
+      flex-direction: row-reverse;
+    }
+
   }
 
 }
